# recoil-rs

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSES.md  README.md  bar_clone_testset.csv
.claude/: settings.local.json
.claude/commands/: check.md  merge-story.md  start-story.md
.github/workflows/: ci.yml
assets/maps/grand_plains/: manifest.ron
assets/maps/loadtest/: manifest.ron
assets/maps/small_duel/: manifest.ron
assets/maps/twin_rivers/: manifest.ron
assets/unitdefs/armada/: arm_bot_factory.ron  arm_commander.ron  arm_flash.ron  arm_jethro.ron  arm_mex.ron  arm_peewee.ron  arm_samson.ron  arm_solar.ron  arm_storage.ron  arm_stumpy.ron
assets/unitdefs/cortex/: cor_ak.ron  cor_bot_factory.ron  cor_commander.ron  cor_crasher.ron  cor_gator.ron  cor_mex.ron  cor_slasher.ron  cor_solar.ron  cor_storage.ron  cor_thud.ron
crates/bar-game/: Cargo.toml
crates/bar-game-lib/: Cargo.toml
crates/bar-game-lib/benches/: loadtest.rs
crates/bar-game-lib/proptest-regressions/: game.txt
crates/bar-game-lib/proptest-regressions/game/: tests.txt
crates/bar-game-lib/src/: ai.rs  building.rs  game.rs  lib.rs  net.rs  production.rs  production_tests.rs  setup.rs
crates/bar-game-lib/src/game/: area_commands.rs  input_actions.rs  mod.rs  test_helpers.rs  tests.rs
crates/bar-game-lib/src/setup/: map_loader.rs  mod.rs  unit_loader.rs  unit_loader_tests.rs  world_init.rs
crates/bar-game-lib/src/tests/: ai_tests.rs  building_tests.rs  production_tests.rs
crates/bar-game/examples/: visual_tests.rs
crates/bar-game/examples/tests/: visual_tests.rs
crates/bar-game/src/: camera_controller.rs  icons.rs  icons_tests.rs  input.rs  loadtest.rs  main.rs
crates/bar-game/src/tests/: camera_controller_tests.rs
crates/bar-server/: Cargo.toml
crates/bar-server/src/: headless_client.rs  main.rs  matchmaker.rs  session.rs
crates/pierce-audio/: Cargo.toml
crates/pierce-audio/src/: engine.rs  lib.rs
crates/pierce-audio/src/tests/: engine_tests.rs
crates/pierce-cob/: Cargo.toml
crates/pierce-cob/src/: driver.rs  lib.rs  loader.rs  vm.rs  vm_tests.rs
crates/pierce-cob/src/tests/: driver_tests.rs  loader_tests.rs
crates/pierce-compute/: Cargo.toml
crates/pierce-compute/src/: buffers.rs  cpu_batch.rs  cpu_batch_libm.rs  cpu_fog.rs  cpu_targeting.rs  gpu_batch.rs  gpu_context.rs  gpu_fog.rs  gpu_manager.rs  gpu_targeting.rs  lib.rs
crates/pierce-compute/src/shaders/: batch_math.wgsl  fog.wgsl  i64_ops.wgsl  targeting.wgsl
crates/pierce-math/: Cargo.toml
crates/pierce-math/src/: angle.rs  batch_ops.rs  lib.rs  mat4.rs  sim_float.rs  vec2.rs  vec3.rs  vec3_tests.rs  vector_ops.rs
crates/pierce-math/src/tests/: mat4_tests.rs  sim_float_tests.rs  (+1 more)
crates/pierce-model/: Cargo.toml
crates/pierce-model/src/: lib.rs  piece_tree.rs  piece_tree_tests.rs  vertex.rs
crates/pierce-net/: Cargo.toml
crates/pierce-net/src/: client.rs  codec.rs  codec_tests.rs  lib.rs  lobby.rs  lockstep.rs  lockstep_tests.rs  protocol.rs  replay.rs  replay_tests.rs  server_tick.rs  sync.rs
crates/pierce-net/src/tests/: lobby_tests.rs  server_tick_tests.rs  sync_tests.rs
crates/pierce-render/: Cargo.toml
crates/pierce-render/src/: backend.rs  backend_tests.rs  gpu.rs  lib.rs  model_registry.rs  obj_loader.rs  obj_loader_tests.rs  particles.rs  renderer.rs  shadow.rs  terrain.rs  unit_mesh.rs  unit_renderer.rs
crates/pierce-render/src/tests/: model_registry_tests.rs  particles_tests.rs  shadow_tests.rs
crates/pierce-s3o/: Cargo.toml
crates/pierce-s3o/src/: lib.rs  lib_tests.rs
crates/pierce-sim/: Cargo.toml
crates/pierce-sim/benches/: sim_bench.rs
crates/pierce-sim/src/: animation.rs  animation_tests.rs  collision.rs  collision_tests.rs  combat_data.rs  commands.rs  commands_tests.rs  components.rs  compute.rs  construction.rs  damage.rs  determinism.rs  economy.rs  factory.rs  flowfield.rs  flowfield_tests.rs  fog.rs  footprint.rs  frame_data.rs  lib.rs  lifecycle.rs  lifecycle_tests.rs  lua_unitdefs.rs  map.rs  map_tests.rs  movement.rs  pathfinding.rs  pathfinding_tests.rs  projectile.rs  selection.rs  selection_tests.rs  shield.rs  sim_runner.rs  smf.rs  spatial.rs  targeting.rs  unit_defs.rs
crates/pierce-sim/src/tests/: combat_data_tests.rs  components_tests.rs  construction_tests.rs  damage_tests.rs  economy_tests.rs  factory_tests.rs  fog_tests.rs  footprint_tests.rs  lifecycle_tests.rs  lua_unitdefs_tests.rs  movement_tests.rs  projectile_tests.rs  shield_tests.rs  sim_runner_tests.rs  smf_tests.rs  spatial_tests.rs  targeting_tests.rs  unit_defs_tests.rs
crates/pierce-ui/: Cargo.toml
crates/pierce-ui/src/: command_panel.rs  lib.rs  lobby.rs  minimap.rs  replay_browser.rs  replay_browser_tests.rs  resource_bar.rs  selection_panel.rs  selection_panel_tests.rs
crates/pierce-ui/src/tests/: minimap_tests.rs  selection_panel_tests.rs
crates/recoil-audio/: Cargo.toml
crates/recoil-audio/src/: events.rs  lib.rs
crates/recoil-math/: Cargo.toml
crates/recoil-math/src/: lib.rs  sim_float.rs  vec2.rs  vec3.rs
crates/recoil-net/: Cargo.toml
crates/recoil-net/src/: codec.rs  lib.rs  lobby.rs  lockstep.rs  protocol.rs  replay.rs  sync.rs
crates/recoil-render/: Cargo.toml
crates/recoil-render/src/: camera.rs  cob_loader.rs  cob_vm.rs  gpu.rs  lib.rs  model_registry.rs  obj_loader.rs  piece_tree.rs  projectile_renderer.rs  renderer.rs  s3o_loader.rs  shadow.rs  terrain.rs  unit_mesh.rs  unit_renderer.rs
crates/recoil-sim/: Cargo.toml
crates/recoil-sim/benches/: sim_bench.rs
crates/recoil-sim/src/: animation.rs  collision.rs  commands.rs  components.rs  construction.rs  damage.rs  economy.rs  factory.rs  flowfield.rs  fog.rs  lib.rs  lua_unitdefs.rs  map.rs  pathfinding.rs  projectile.rs  selection.rs  sim_runner.rs  spatial.rs  targeting.rs  unit_defs.rs
crates/recoil-ui/: Cargo.toml
crates/recoil-ui/src/: lib.rs  minimap.rs  replay_browser.rs  resource_bar.rs  selection_panel.rs  status_bar.rs
scripts/: flamegraph-game.cmd  flamegraph.cmd  jira-parse.cmd  jira.sh  profile-bench.cmd  profile-game.cmd  profile-netplay.cmd
