[workspace]
resolver = "2"
members = [
    "crates/pierce-math",
    "crates/pierce-sim",
    "crates/pierce-net",
    "crates/pierce-render",
    "crates/pierce-ui",
    "crates/pierce-audio",
    "crates/bar-game",
    "crates/bar-game-lib",
    "crates/pierce-model",
    "crates/pierce-cob",
    "crates/pierce-s3o",
    "crates/pierce-compute",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Math & core
serde = { version = "1", features = ["derive"] }
bincode = "1"

# ECS
bevy_ecs = "0.15"

# Async & networking
tokio = { version = "1", features = ["full"] }

# Rendering
wgpu = "24"
winit = "0.30"

# UI
egui = "0.31"
eframe = "0.31"
egui-wgpu = "0.31"
egui-winit = "0.31"

# Audio
kira = "0.9"

# Data formats
ron = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Image loading (DDS buildpics)
image = { version = "0.25", default-features = false, features = ["dds"] }

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Buffer uploads
bytemuck = { version = "1", features = ["derive"] }

# Parallelism
rayon = "1"

# Deterministic cross-platform math (pure Rust, no system libm)
libm = "0.2"

# SIMD (portable across x86 AVX2 + ARM NEON)
wide = "0.7"

# Arena allocator (zero-cost per-frame reset)
bumpalo = { version = "3", features = ["collections"] }

# Async block_on
pollster = "0.4"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Profiles ---

[profile.release]
codegen-units = 8

# Profiling: debug symbols only for local crates, not deps
[profile.profiling]
inherits = "release"
debug = "line-tables-only"

[profile.profiling.package."*"]
debug = false

[profile.bench]
inherits = "release"
