[package]
name = "bar-game-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BAR game logic library — headless-capable, no rendering deps"

[dependencies]
recoil-math = { path = "../recoil-math" }
recoil-sim = { path = "../recoil-sim" }
anyhow = { workspace = true }
bevy_ecs = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
recoil-net = { path = "../recoil-net" }
proptest = { workspace = true }
bincode = { workspace = true }
