[package]
name = "bar-game-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BAR game logic library — headless-capable, no rendering deps"

[features]
stress-tests = []
gpu-compute = ["dep:pierce-compute"]

[dependencies]
pierce-compute = { path = "../pierce-compute", optional = true }
pierce-math = { path = "../pierce-math" }
pierce-sim = { path = "../pierce-sim" }
anyhow = { workspace = true }
bevy_ecs = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
pierce-net = { path = "../pierce-net" }
proptest = { workspace = true }
bincode = { workspace = true }

[[bench]]
name = "loadtest"
harness = false
