[package]
name = "bar-game"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BAR-inspired RTS game binary"

[features]
gpu-compute = ["dep:pierce-compute", "bar-game-lib/gpu-compute"]

[dependencies]
bar-game-lib = { path = "../bar-game-lib" }
pierce-compute = { path = "../pierce-compute", optional = true }
pierce-math = { path = "../pierce-math" }
pierce-sim = { path = "../pierce-sim" }
pierce-net = { path = "../pierce-net" }
pierce-render = { path = "../pierce-render" }
pierce-model = { path = "../pierce-model" }
pierce-cob = { path = "../pierce-cob" }
pierce-s3o = { path = "../pierce-s3o" }
pierce-ui = { path = "../pierce-ui" }
pierce-audio = { path = "../pierce-audio" }
anyhow = { workspace = true }
bevy_ecs = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
pollster = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
ron = { workspace = true }
image = { workspace = true }

[dev-dependencies]
tempfile = "3"
