[package]
name = "pierce-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lockstep networking and replay for the Pierce RTS engine"

[dependencies]
pierce-sim = { path = "../pierce-sim" }
bevy_ecs = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
