[package]
name = "pierce-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wgpu rendering pipeline for the Pierce RTS engine"

[dependencies]
pierce-sim = { path = "../pierce-sim" }
pierce-model = { path = "../pierce-model" }
pierce-cob = { path = "../pierce-cob" }
pierce-s3o = { path = "../pierce-s3o" }
wgpu = { workspace = true }
winit = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
