[package]
name = "pierce-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ECS-based simulation for the Pierce RTS engine"

[features]
## Per-system backend selection. Default = all inline CPU.
## Enable specific features to switch individual systems to GPU/batch.

# Fog of war
fog-gpu = []          # Use ComputeBackends.fog (GPU or CPU backend)

# Targeting
targeting-gpu = []    # Use ComputeBackends.targeting (GPU brute-force)

# Movement
movement-batch = []   # Use BatchMathBackend for bulk atan2/sincos

# Collision
collision-gpu = []    # (future) GPU collision compute

# Pathfinding
flowfield-pathing = [] # Use flow fields instead of per-unit A*

# Convenience: enable all GPU backends at once
all-gpu = ["fog-gpu", "targeting-gpu", "movement-batch", "collision-gpu", "flowfield-pathing"]

[dependencies]
pierce-math = { path = "../pierce-math" }
bevy_ecs = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
wide = { workspace = true }
bumpalo = { workspace = true }
thiserror = { workspace = true }
ron = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "sim_bench"
harness = false
