[package]
name = "recoil-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lockstep networking and replay for the Recoil RTS engine"

[dependencies]
recoil-sim = { path = "../recoil-sim" }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
