[package]
name = "recoil-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "wgpu rendering pipeline for the Recoil RTS engine"

[dependencies]
recoil-sim = { path = "../recoil-sim" }
wgpu = { workspace = true }
winit = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
