[package]
name = "recoil-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ECS-based simulation for the Recoil RTS engine"

[dependencies]
recoil-math = { path = "../recoil-math" }
bevy_ecs = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ron = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "sim_bench"
harness = false
