[package]
name = "recoil-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "In-game UI framework for the Recoil RTS engine"

[dependencies]
recoil-sim = { path = "../recoil-sim" }
recoil-render = { path = "../recoil-render" }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
tracing = { workspace = true }
